# terminal-chess

./: Cargo.toml  README.md  TODO.txt
.circleci/: config.yml
src/: action.rs  ai.rs  board.rs  game.rs  lib.rs  main.rs  piece.rs  protocol.rs  server.rs  session.rs  ui.rs
src/engine/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
