[package]
name = "terminal-chess"
version = "0.1.0"
authors = ["Niklas Begley <niklas.begley@gmail.com>"]

[dependencies]
clap = "2.30.0"
termion = "1.5.1"
tokio = "0.1.6"
bytes = { version = "0.4.7", features = ["serde"] }
futures = "0.1"
serde = "1.0.55"
serde_json = "1.0.17"
serde_derive = "1.0"

[features]
strict = []
